# ComputerGraphicsExercises

./: README.md
Exercise1/: extra.html  index.html
Exercise1/Advanced/: Advanced.js  Extra.js
Exercise1/Basic/: Basic1.js  Basic2.js  Basic3.html  Example.js  visualizer.html
Exercise2/: index.html
Exercise2/Advanced/: .Advanced.js.kate-swp  Advanced.js
Exercise2/Basic/: Basic1.js  Basic2.js  Basic2.txt  Helper.js
Exercise3/: index.html
Exercise3/Basic/: Basic1.js  Basic1_v.js  Basic2.js  Basic3.js  Basic4.js  helper.js  shader.vs  shader_circlefromquad.fs  shader_circlefromquad.vs  shader_wireframe.fs  shader_wireframe.vs  shader_wireframe_l.fs  shader_wireframe_l.vs
Exercise4/: index.html
Exercise4/Basic/: .Basic3.js.kate-swp  Basic1.js  Basic1_l.js  Basic2.js  Basic3.js  Basic3_with_comments.js  gl-matrix.js  shader_cube.fs
Exercise5/: index.html
Exercise5/Basic/: Basic1.js  Basic2.js  Basic3.txt  shader_phong.fs  shader_phong.vs
Exercise5/images/: plot.txt  plot2.txt
Exercise6/: index.html
Exercise6/Basic/: Basic1.js  Basic2.js  Basic3.js  shader_texture.fs  shader_texture.vs
Exercise7/: Basic1.txt  RenderingPipeline.js  index.html
Exercise7/Basic/: Basic1.js  Basic2.js  RenderingPipeline.js
Exercise8/: index.html
cgAdvancedFramework/: CMakeLists.txt  Makefile  README.md  git_repo  git_repo.pub  log.txt  prepare.sh
cgAdvancedFramework/cmake/: FindGLM.cmake  FindSDL2.cmake
cgAdvancedFramework/src/: CMakeLists.txt  imgui.ini
cgAdvancedFramework/src/Advanced03/: Advanced03  imgui.ini
cgAdvancedFramework/src/Advanced03/data/: icosphere.mtl
cgAdvancedFramework/src/Advanced03/shaders/: simple_color.glsl
cgAdvancedFramework/src/Advanced03/src/: cg.cpp  cg.h  main.cpp
cgAdvancedFramework/src/Advanced04/: Advanced04  CMakeLists.txt  imgui.ini
cgAdvancedFramework/src/Advanced04/shaders/: .projection.glsl.kate-swp  particle_shadows.glsl  projection.glsl
cgAdvancedFramework/src/Advanced04/src/: .cg.cpp.kate-swp  cg.cpp  main.cpp
cgAdvancedFramework/src/Advanced05/: Advanced05  imgui.ini
cgAdvancedFramework/src/Advanced05 (1)/: Advanced05_test  imgui.ini
cgAdvancedFramework/src/Advanced05 (1)/shaders/: light_types.glsl
cgAdvancedFramework/src/Advanced05 (1)/src/: cg.h
cgAdvancedFramework/src/Advanced05/data/: lanternlamp.mtl
cgAdvancedFramework/src/Advanced05/shaders/: .light_types.glsl.kate-swp  light_types.glsl  simple_color.glsl
cgAdvancedFramework/src/Advanced06/: Advanced06  imgui.ini
cgAdvancedFramework/src/Advanced06/shaders/: clouds.glsl  earth.glsl  helper.glsl  universe.glsl
cgAdvancedFramework/src/Advanced07/: Advanced07  CMakeLists.txt  imgui.ini
cgAdvancedFramework/src/Advanced07/data/: box.mtl  teapot.mtl
cgAdvancedFramework/src/Advanced07/shaders/: plane.glsl  simple_color.glsl  wireframe.glsl
cgAdvancedFramework/src/Advanced07/src/: .cg.cpp.kate-swp  .cg.h.kate-swp  cg.cpp  cg.h  fps_camera.cpp  fps_camera.h  object.h  quaternion.cpp
cgAdvancedFramework/src/Advanced07/src/submission_advanced_7/: cg.cpp  object.h
cgAdvancedFramework/src/framework/: camera.cpp  camera.h  cg_helper.cpp  cg_helper.h  config.h  objLoader.cpp  objLoader.h  pngLoader.cpp  pngLoader.h  shaderManager.cpp  shaderManager.h  window.cpp  window.h
cgAdvancedFramework/src/framework/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  imgui_internal.h  imgui_orient.cpp  imgui_orient.h
(+78 files in other folders)
